# epitech-projects

./: README.md  delete-git.sh
101pong_2017/: 101pong.c  Makefile  main.c
102architect_2017/: Makefile  main.c  organisation.txt
103cipher_2017/: Makefile  decipherment.c  deter.c  encryption.c
104intersection_2017/: 104intersection
105torus_2017/: 105torus  repartition.txt  torus_newton.py  torus_newton_m.py  torus_secant.py
106bombyx/: 106bombyx  calcul_with_bornes.py
106bombyx_2017/: 106.sh  106bombyx  calcul_with_bornes.py
108trigo_2017/: 108trigo  functions.py
110borwein_2017/: 110borwein  calcul.py  save.py
201yams_2018/: calc.py  parser.py
202unsold_2018/: calc.py  parser.py
203hotline_2018/: calc.py  parser.py
205IQ_2018/: integral.py  parser.py
206neutrinos_2018/: 206neutrinos  calc.py  parser.py
207demography_2018/: calc.py  objects.py  parser.py
208dowels_2018/: calc.py  parser.py
209poll_2018/: 209poll  calc.py  parser.py
ASM_minilibc_2018/: .gitignore  Makefile
B1Lettre/: B1-P2-Lettre-lucas.tabis-Nancy.docx
B1Mailpro/: B1-MP1-mail-pro-lucas.tabis-Nancy.docx
B4BILAN/: B4-PP-Bilan-lucas.tabis-Nancy.odt
B4RECADRER/: B4-P1-recadrer-lucas.tabis-Nancy.odt
CPE_BSQ_2017/: Makefile  compute_algorithm.c  concat_file.c  concat_params.c  memory_handling.c
CPE_BSQ_bootstrap_2017/: Makefile  main.c
CPE_corewar_2017/: .gitignore  Makefile
CPE_duostumper_1_2017/: Makefile  algorithm.c  main.c
CPE_duostumper_2_2017/: Makefile  main.c
CPE_duostumper_3_2017/: Makefile  main.c
CPE_duostumper_6_2017/: Makefile  main.c
CPE_duostumper_7_2017/: Makefile
CPE_getnextline_2017/: Makefile  get_next_line.c  test  unit_test_gnl.c  unit_test_gnl_2.c
CPE_getnextline_2018/: get_next_line.c  get_next_line.h
CPE_getnextline_bootstrap_2018/: get_nb_calls.c  get_nb_calls_init_9.c  get_sentence_chunk_by_chunk.c  read_and_display_read_line_1.c  read_and_display_read_line_n.c  read_line_and_display_remaining.c  read_next_char.c  read_next_n_bytes.c  read_next_ten_bytes.c
CPE_matchstick_2017/: Makefile  main.c
CPE_n4s_2017/: .gitignore  Makefile
CPE_pushswap_2017/: Makefile  main.c  operations_files_01.c  operations_files_02.c  push_swap.c  utils.c
CPE_solostumper_1_2017/: Makefile  count_words.c
CPE_solostumper_2_2017/: Makefile  main.c  (+1 more)
CPP_zia_2019/: .gitignore  CMakeLists.txt  Doxyfile  Zia  build.sh  conanfile.txt  example.json  main.cpp
CPP_zia_2019/api/examples/logger-console/: LoggerConsole.cpp  LoggerConsole.hpp  main.cpp
CPP_zia_2019/api/sources/module/: IModule.hpp
CPP_zia_2019/src/: Color.hpp  Core.cpp  Core.hpp  Exception.cpp  Exception.hpp  LibLoader.cpp  LibLoader.hpp  ParserJson.cpp  ParserJson.hpp  Shell.cpp  Shell.hpp
CPP_zia_2019/src/http/: Request.cpp  Request.hpp  Response.cpp  Response.hpp
CPP_zia_2019/src/modules/: ModuleException.cpp  ModuleException.hpp
CPP_zia_2019/src/modules/http/: HttpModule.cpp  HttpModule.hpp  PhpCgi.cpp  PhpCgi.hpp  TestModule.cpp  TestModule.hpp
CPP_zia_2019/src/modules/logger/: EasyLogger.cpp  EasyLogger.hpp
CPP_zia_2019/src/modules/network/: BoostNetwork.cpp  BoostNetwork.hpp
CPP_zia_2019/src/net/: BoostService.hpp  BoostTcpServer.cpp  BoostTcpServer.hpp  BoostTcpSocket.cpp  BoostTcpSocket.hpp  NetworkException.cpp  NetworkException.hpp
CPP_zia_2019/tests/: UnitTest_LibLoader.cpp  apcpplib_unit_tests
(+1289 files in other folders)
